--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button id="urlBtn" class="btns fadeout black-text">Url</button>
             </div>
             <div class="col s12 m12 l9" id="content">
-                <h4 class="headline">Contents</h4>
+                <h4 class="headline">Using - <span id='method'></span></h4>
                 <div class="link invisible" ></div>
                 <div id="data" >
                     
