demo file modified

--- a/demo.html
+++ b/demo.html
@@ -47,6 +47,7 @@
                 <div style="margin-top: 50px">
                     </div>
                 <div id='codebox'>
+                    <h4 class="invisible headline">CODE</h4>
                     <code id="code"></code>
                 </div>
             </div>
