added report icon to index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>AJAX Demo</h1>
+        <h1>Abhishek Powar</h1>
     </header>
     <div class="container">
         <div style="height: 20px">
@@ -28,6 +28,12 @@
                 <span class="title">Google Slides</span>
                 <a class="icon right" target="_blank" href="https://docs.google.com/presentation/d/1-WAr8u6L-swq9j8iA2LLF_I9WdOLXMgcccczKwYcUVo/edit">
                     <i class="material-icons">ondemand_video</i>
+                </a>
+            </div>
+            <div class="card mycard">
+                <span class="title">Seminar Report</span>
+                <a class="icon right" target="_blank" href="https://docs.google.com/document/d/1bVopFTU484HwSE1r4YkGPRK5iBKF8onrnr3-cab0NNg/edit">
+                    <i class="material-icons">insert_drive_file</i>
                 </a>
             </div>
             <div class="card mycard">
@@ -46,15 +52,21 @@
                 </a>
             </div>
             <div class="card mycard">
-                <span class="title">Demo</span>
-                <a class="icon right" href="demo.html" >
-                    <i class="material-icons">code</i>                
-                </a>
-            </div>
+                    <span class="title">Seminar Report</span>
+                    <a class="icon right" target="_blank" href="https://docs.google.com/document/d/1ACBqjSrLyEvGb0yMqS84Et8FX0_V97uNnwN397zGk6Y/edit">
+                        <i class="material-icons">insert_drive_file</i>
+                    </a>
+                </div>
             <div class="card mycard">
                 <span class="title">Download Resource</span>
                 <a class="icon right" href="resource/ajax.zip" download="ajax">
                     <i class="material-icons">file_download</i>                
+                </a>
+            </div>
+            <div class="card mycard">
+                <span class="title">Demo</span>
+                <a class="icon right" href="demo.html" >
+                    <i class="material-icons">code</i>                
                 </a>
             </div>
         </div>
